# pulumi_eks_infra

./: .gitignore  pyproject.toml  requirements.txt
eks_infra/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.uat.yaml  Pulumi.yaml  __main__.py  kubeconfig.yaml  preview.json  requirements.txt
eks_infra/kube_yaml/: acme-solver-ingress.yaml  acme-solver_ingressclass.yaml  aws-auth.yaml  aws-lbc-rolebinding.yaml  aws-lbc-v2.13.2.yaml  aws-lbc_rbac.yaml  chatai02_secret_sts.yaml  chatai03_openwebui.yaml  chatai04_prod-test_ingress.yaml  chatai04_prod_ingress.yaml  chatai05_docling.yaml  chatai05_gpu_docling.yaml  container-insights-agents.yaml  create_aws_test_prod_retain_sc.yaml  credentials-velero  genai00_create_ebs-retain-storageclass.yaml  genai01_ns_pvc.yaml  genai02_secret_sts.yaml  genai03_openwebui.yaml  genai04_clean_ingress.yaml  iam-test-pod.yaml  lbc-clusterrole-fix-secret.yaml  lbc-read-cert-test.yaml  letsencrypt-prod-issuer.yaml  letsencrypt-staging-issuer.yaml  test-app.yaml  tool00_pgadmin.yaml  tool01_pgadmin-ingress.yaml
eks_infra/openwebui_config/: config-1750402274873.json  models-export-1750402313287.json  user-import.csv
genai/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  test_chat_completion.py  test_chat_completion.sh  test_get_all_models.sh
infrastructure/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  graph
workload/: Pulumi.yaml
