[project]
name = "pulumi-mmh-aws"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.33",
    "psycopg2-binary>=2.9.10",
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-aws>=6.0.2,<7.0.0",
    "pulumi-awsx>=2.21.1",
    "pulumi-eks>=3.9.1",
    "pulumi-postgresql>=3.15.2",
    "pulumi-random>=4.18.2",
    "pybars3>=0.9.7",
]
